apps/mosquitto/overlays/prod/ingress-route-cs.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mosquitto-ingress-codeserver
  namespace: mosquitto
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`mqtt.cs.sobrinho.pt`)
      kind: Rule
      services:
        - name: mosquitto-codeserver
          port: codeserver
