apps/mosquitto/overlays/prod/ingress-route-mqtt.yaml
kind: IngressRouteTCP
apiVersion: traefik.io/v1alpha1
metadata:
  name: mosquitto-ingress-mqtt
  namespace: mosquitto

spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: main
