apps/mosquitto/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mosquitto-ingress
  namespace: mosquitto

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`mosquitto.sobrinho.pt`)
      kind: Rule
      services:
        - name: mosquitto
          port: main
